# backend/app/models/__init__.py
@@ -2,5 +2,6 @@
 
 from app.models.altura import FUENTE_INA, FUENTE_PREFECTURA, Altura, Fuente
 from app.models.base import Base
+from app.models.pronostico import Pronostico
 
-__all__ = ["Base", "Altura", "Fuente", "FUENTE_INA", "FUENTE_PREFECTURA"]
+__all__ = ["Base", "Altura", "Fuente", "FUENTE_INA", "FUENTE_PREFECTURA", "Pronostico"]
